# Computer-Graphics-Programming

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  main.c  main.cpp  mat_inverse.py  plan.txt
application/: CMakeLists.txt  application.cpp  application.h
application/core_utils/: CMakeLists.txt  timer.h
application/engine/: CMakeLists.txt  engine.cpp  engine.h
application/engine/engine_utils/: mesh.h
application/engine/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
application/engine/renderer/backends/: render_backend.h  simple_renderer.h  tiled_renderer.h
application/engine/renderer/backends/tiled_renderer/: CMakeLists.txt  attribute_interpolation.cpp  fragment_shader.cpp  primitive_assembler.cpp  primitive_assembler.h  primitive_binner.cpp  primitive_binner.h  rasterizer.h  tiled_renderer.cpp  tiled_renderer.h  types.h  vertex_post_processor.cpp  vertex_post_processor.h  vertex_shader.cpp  vertex_shader.h
application/engine/renderer/post_process/: bilinear_upscale.h  fxaa.h  lanczos_upscale.h
application/engine/scene/: CMakeLists.txt  asset_load.cpp  asset_load.h  camera.cpp  camera.h
application/engine/scene/stb_image/: stb_image.h
application/state/: info.h  settings.h
application/window/: CMakeLists.txt  gui.cpp  gui.h  window.cpp  window.h
assets/: .gitignore
assets/backpack/: backpack.mtl
cuda_test/simple_rasterizer/: .clangd  CMakeLists.txt  main.cu
cuda_test/simple_rasterizer/.cache/clangd/index/: main.cu.C7643C80908FC896.idx  rasterizer.cu.B6771A07B4CDC5AC.idx  rasterizer.h.487C51FC4ADF8B73.idx
cuda_test/simple_rasterizer/rasterizer/: rasterizer.cu  rasterizer.h
display/: Display.c
gml/: CMakeLists.txt  GML.c  GML.h
linux_fb_test/: main  main.c
render/: FragmentShader.h  PrimitivesAssembler.c  Rasterizer.c  Rasterizer.h  VertexPostProcessor.c
research/: graphics_library.txt  project_overview.txt  thread_architecture.txt
rutil/: CMakeLists.txt  ModelLoader.h
software_rendering/:   CMakeLists.txt  Dockerfile  RenderUtil.c  RenderUtil.h  imgui.ini  main.c  main.cpp  plan.md  plan.txt  scatter3d.py
software_rendering/application/: CMakeLists.txt  application.cpp  application.h
software_rendering/application/core_utils/: CMakeLists.txt  buffer.h  core_utils.cpp  core_utils.h
software_rendering/application/display/: CMakeLists.txt  display.cpp  display.h  gui.cpp  gui.h
software_rendering/application/engine/: CMakeLists.txt  engine.cpp  engine.h
software_rendering/application/engine/engine_utils/: light.h  mesh.h  render_object.h  texture.h
software_rendering/application/engine/game_logic/: CameraController.h
software_rendering/application/engine/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
software_rendering/application/engine/renderer/backends/: CMakeLists.txt  render_backend.h  simple_renderer.h  tiled_renderer.h
software_rendering/application/engine/scene/: CMakeLists.txt  asset_load.cpp  asset_load.h  camera.cpp  camera.h  scene.cpp  scene.h
software_rendering/application/state/: input.h  settings.h  state.h
software_rendering/application/window/: CMakeLists.txt  gui.cpp  gui.h  window.cpp  window.h
software_rendering/assets/: .gitignore
software_rendering/assets/scenes/: cube.scene  diamond.scene  helicopter.scene  knife.scene
software_rendering/display/: CMakeLists.txt  Display.c  Display.h  GAEDisplay.c  GAEDisplay.h
software_rendering/engine/: CMakeLists.txt  engine.c  engine.cpp  engine.h
software_rendering/engine/gml/: GML.h
software_rendering/engine/render/: CMakeLists.txt  FragmentShader.c  FragmentShader.cpp  FragmentShader.h  PrimitivesAssembler.c  PrimitivesAssembler.cpp  PrimitivesAssembler.h  Rasterizer.h  VertexPostProcessor.cpp  VertexPostProcessor.h  VertexShader.h  camera.cpp  camera.h  renderer.c  renderer.cpp  renderer.h
software_rendering/engine/render/backend/: FragmentShader.cpp  FragmentShader.h  PrimitivesAssembler.h  Rasterizer.cpp  Rasterizer.h  VertexPostProcessor.h  VertexShader.cpp
software_rendering/engine/rutil/: CMakeLists.txt  RenderUtil.c  RenderUtil.h
software_rendering/engine/utilities/: AssetManager.h  CMakeLists.txt  ModelLoader.c  ModelLoader.cpp  ModelLoader.h  RenderUtil.c  RenderUtil.h  Types.cpp  Types.h
software_rendering/gml/: GML.c  GML.h
software_rendering/render/: CMakeLists.txt  FragmentShader.c  FragmentShader.h  PrimitivesAssembler.c  PrimitivesAssembler.h  Rasterizer.c  Rasterizer.h  VertexPostProcessor.c  VertexPostProcessor.h  VertexShader.c  VertexShader.h  renderer.c  renderer.h
software_rendering/resources/trench_knife/: trench_knife.mtl
software_rendering/rutil/: CMakeLists.txt  ModelLoader.c  ModelLoader.h  RenderUtil.c  RenderUtil.h
threading_test/: CMakeLists.txt  gpu_thread.c  main  main.c
xlib_test/: CMakeLists.txt  DisplayClass.h  GAEDisplay.c  GAEDisplay.h  main.c  main.cpp
